Changing in twig

--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -9,7 +9,7 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Hello {{ ccategory}}! ✅</h1>
+    <h1>Hello {{ category}}! ✅</h1>
 
     This friendly message is coming from:
     <ul>
