--- a/templates/login/login.html.twig
+++ b/templates/login/login.html.twig
@@ -1,20 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello {{ login }}!{% endblock %}
 
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+        {% block title %}
 
-<div class="example-wrapper">
-    <h1>Hello {{ login }}! ✅</h1>
+                 Company Name || Sign in, Register
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>src/Controller/LoginController.php</code></li>
-        <li>Your template at <code>templates/login/index.html.twig</code></li>
-    </ul>
-</div>
-{% endblock %}
+         {% endblock title %}
+    
+  
+        {% block websiteName %}
+
+               Sign in :)
+
+         {% endblock websiteName %}
