--- a/templates/user/showuserdetails.html.twig
+++ b/templates/user/showuserdetails.html.twig
@@ -13,3 +13,9 @@
                 User Panel
 
          {% endblock websiteName %}
+
+          {% block websiteContent  %}
+
+             mmm
+
+         {% endblock websiteContent %}
