--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -83,8 +83,13 @@
            {% block websiteContent %}
 
           <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-          <button type="button" href="#" class="btn btn-success">kliknij</button>
-          <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+          
+           {% block websitButtion %}
+
+             <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+
+         {% endblock websiteButtion %}
+         
 
         </div>
       </div>
