--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -84,7 +84,7 @@
 
           <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
           
-           {% block websitButtion %}
+           {% block websiteButtion %}
 
              <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
 
