Adding code to controller

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,6 +28,28 @@
   <body>
 
 
+{% block nav%}
+
+    <nav class="site-header sticky-top py-1">
+      <div class="container d-flex flex-column flex-md-row justify-content-between">
+        <a class="py-2" href="#">
+         
+        </a>
+        <a class="py-2 d-none d-md-inline-block" href="/">Home</a>
+        <a class="py-2 d-none d-md-inline-block" href="/login">Login</a>
+        <a class="py-2 d-none d-md-inline-block" href="/users/5">User</a>
+        <a class="py-2 d-none d-md-inline-block" href="/film/6">Film</a>
+        <a class="py-2 d-none d-md-inline-block" href="/category/6">Category</a>
+      
+      </div>
+    </nav>
+
+{% endblock nav%}
+
+
+
+
+
 
     <main role="main">
 
